k8s/ota-control-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ota-control-service
  namespace: vehicle-ota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ota-control-service
  template:
    metadata:
      labels:
        app: ota-control-service
    spec:
      containers:
        - name: ota-control-service
          image: kkr010128/ota-control-service:stage2-cqrs-v1
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ota-control-service
  namespace: vehicle-ota
spec:
  selector:
    app: ota-control-service
  ports:
    - name: http
      port: 8080
      targetPort: http
